fixed navbar dropdown bug in projects, added spacing in projects

--- a/stylesheets/base_page_template.css
+++ b/stylesheets/base_page_template.css
@@ -33,3 +33,14 @@ h1 {
         display: flex;
     }
 }
+
+.container_cards {
+    border-radius: 30px;
+    /*border: 3px solid var(--text-primary-color);*/
+    margin-left: 6%;
+    margin-right: 6%;
+    margin-top: 8%;
+    margin-bottom: 2%;
+    padding-left: 15px;
+    min-height: 1000px;
+}
